--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: BattlePass
-version: 3.2.4
+version: 3.2.5
 main: io.github.battlepass.BattlePlugin
 api-version: 1.13
 soft-depend:
@@ -37,7 +37,7 @@ soft-depend:
 
 commands:
   battlepass:
-    aliases: [bp, battlep, bpass]
+    description: Well. The main command I guess?
   battlepassadmin:
     aliases: [bpa, battlepassa, bpadmin]
 
