LobbyPresents & craft quest fix & season finished options & menu cmd fix

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -72,3 +72,7 @@ current-season:
   unlocks:
     require-previous-completion: false # Whether the user must complete all missions in the previous week to start the next week.
     lock-previous-weeks: false # Whether previous weeks will be locked when a new week is released.
+
+season-finished:
+  stop-daily-quests: false # Whether once the season is finished, daily quests will stop being rolled / progress not counted.
+  stop-other-quests: false # If set to true, anything other than daily quests will not be progressable. Combine with the option above to block all quests.
