Draw past max tier fix, UltraSkywars, check null daily quests, stop no-permission bpa tabbing, menu action in more places

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -43,6 +43,7 @@ commands:
     description: Well. The main command I guess?
   battlepassadmin:
     aliases: [bpa, battlepassa, bpadmin]
+    permission: battlepass.admin
 
 permissions:
   battlepass.admin:
