--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -59,6 +59,8 @@ blacklisted-worlds: # World names where quests cannot be progressed.
   - 'world_with_no_quests'
   - 'another_world'
 
+daily-quests-enabled: true
+
 current-season:
   time-zone: 'Europe/Oslo' # The timezone for week releases to be based off.
   start-date: '06/06/2020' # This is what all of the week releases are based off. Format: dd/mm/yyyy
