--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     }
 }
 
-group = pluginGroup
+group 'io.github.battlepass'
+version '3.2.5'
 
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -27,18 +28,17 @@ repositories {
 }
 
 dependencies {
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
-    implementation 'com.github.Hyfe-JavaDebug:simple-spigot:1.0.9.10'
     compileOnly fileTree(include: ['*.jar'], dir: 'lib') // Add everything in the lib folder.
     compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok:1.18.12'
-    // compileOnly 'io.github:luxuryquests:1.5.0'
     compileOnly 'me.clip:placeholderapi:2.10.5'
     compileOnly 'net.citizensnpcs:citizens:2.0.26-SNAPSHOT'
     compileOnly 'com.wasteofplastic:askyblock:3.0.9.4'
     compileOnly 'com.andrei1058.bedwars:bedwars-api:19.10'
     compileOnly 'com.github.Angeschossen:LandsAPI:4.5.2.0'
     compileOnly 'com.github.electro2560:ClueScrollsAPI:-SNAPSHOT'
+    implementation 'com.github.hyfe-dev:simple-spigot:1.0.10.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
 processResources {
@@ -51,8 +51,7 @@ shadowJar {
         project.version = buildNo
         fileNameBuilder.append(this.project.buildNo)
     } else {
-        project.version = pluginVersion
-        fileNameBuilder.append(pluginVersion)
+        fileNameBuilder.append(this.version)
     }
     archiveFileName = fileNameBuilder.toString().concat(".jar")
     relocate 'me.hyfe.simplespigot', "io.github.battlepass.simple-spigot"
