--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 group 'io.github.battlepass'
-version '3.5'
+version '3.5-dev'
 
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
