--- a/src/main/resources/passes/premium.yml
+++ b/src/main/resources/passes/premium.yml
@@ -3,7 +3,7 @@ default-points-required: 100
 #required-permission: 'battlepass.premium'
 
 items:
-  doesnt-have-pass: # The item if a player does not have the premium pass.
+  doesnt-have-pass-item: # The item if a player does not have the premium pass.
     material: 'minecart:0'
     name: '&eTier %tier%'
     lore:
