update version & api version

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: BattlePass
-version: 3.5.4-dev
+version: 3.6.0
 main: io.github.battlepass.BattlePlugin
-api-version: 1.13
+api-version: 1.16
 soft-depend:
   - AdvancedEnchantments
   - ASkyBlock
