--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
     maven { url 'https://gitlab.com/api/v4/projects/14122684/packages/maven' } // BedWars1058
     maven { url 'http://dl.bintray.com/tastybento/maven-repo' } // ASkyBlock
     maven { url 'http://repo.citizensnpcs.co/' } // Citizens
+    maven { url 'http://repo.andrei1058.com/releases/' }
     maven { url 'https://repo.codemc.org/repository/maven-public/' } // Some CodeCo stuff
     maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceholderAPI
 }
@@ -34,7 +35,7 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.10.8'
     compileOnly 'net.citizensnpcs:citizens:2.0.26-SNAPSHOT'
     compileOnly 'com.wasteofplastic:askyblock:3.0.9.4'
-    compileOnly 'com.andrei1058.bedwars:bedwars-api:19.10'
+    compileOnly 'com.andrei1058.bedwars:bedwars-api:20.7'
     compileOnly 'com.github.Angeschossen:LandsAPI:4.5.2.0'
     compileOnly 'com.github.electro2560:ClueScrollsAPI:-SNAPSHOT'
     implementation 'com.github.hyfe-dev:simple-spigot:1.0.10.5'
