--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -2,6 +2,7 @@
 
 could-not-find-user: "&7Could not find the user &e%player%"
 no-permission: "&7You do not have permission to execute this command."
+disallowed-permission: "&7You do not have permission to use the battlepass." # This is used if you give a user battlepass.block to disallow them from using the battlepass.
 collectable-rewards-notification: "&e&lHEY! &eYou have rewards available to claim. Check them out in /bp open rewards."
 
 daily-quest-reset: '&eThere have been some quests that have reset.'
