--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: BattlePass
-version: 3.10
+name: "BattlePass"
+version: "3.10"
 main: io.github.battlepass.BattlePlugin
 api-version: 1.13
 soft-depend:
