Config fixes & reward items & simple spigot & close menu on reward claim

--- a/src/main/resources/passes/free.yml
+++ b/src/main/resources/passes/free.yml
@@ -37,9 +37,17 @@ tiers:
   '2': # The tier number
     rewards: ['1'] # The reward numbers to give to the player (see rewards.yml).
     required-points: 120 # The amount of points the player must get to advance to the tier.
-    icon: 'diamond_sword:0'
   '4':
     rewards: ['4', '2']
   '10':
     rewards: ['1', '2', '3', '4']
     required-points: 500
+    locked-tier-item: # You can specify any of the items in the 'items' section above per tier. They're completely optional for each tier.
+      material: 'barrier:0'
+      name: '&eTier %tier%'
+      lore:
+        - ''
+        - '&7Rewards:'
+        - '%lore_addon%'
+        - ''
+        - '&7Status: &cSpecial Locked Item'
