--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,11 @@ repositories {
     maven { url 'https://oss.sonatype.org/content/groups/public/' }
     maven { url 'https://jitpack.io' }
     maven { url 'https://gitlab.com/api/v4/projects/14122684/packages/maven' } // BedWars1058
-    maven { url 'http://dl.bintray.com/tastybento/maven-repo' } // ASkyBlock
-    maven { url 'http://repo.citizensnpcs.co/' } // Citizens
-    maven { url 'http://repo.andrei1058.com/releases/' }
+    maven { url 'https://dl.bintray.com/tastybento/maven-repo' } // ASkyBlock
+    maven { url 'https://repo.citizensnpcs.co/' } // Citizens
+    maven { url 'https://repo.andrei1058.com/releases/' }
     maven { url 'https://repo.codemc.org/repository/maven-public/' } // Some CodeCo stuff
-    maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceholderAPI
+    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceholderAPI
 }
 
 dependencies {
@@ -40,7 +40,7 @@ dependencies {
     compileOnly 'com.andrei1058.bedwars:bedwars-api:20.7'
     compileOnly 'com.github.Angeschossen:LandsAPI:4.5.2.0'
     compileOnly 'com.github.electro2560:ClueScrollsAPI:-SNAPSHOT'
-    implementation 'com.github.hyfe-dev:simple-spigot:1.0.11.1'
+    implementation 'com.github.hyfe-dev:simple-spigot:1.0.11.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
