--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 repositories {
     mavenCentral()
     mavenLocal()
-    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'}
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url 'https://oss.sonatype.org/content/groups/public/' }
     maven { url 'https://jitpack.io' }
     maven { url 'https://gitlab.com/api/v4/projects/14122684/packages/maven' } // BedWars1058
@@ -26,6 +26,7 @@ repositories {
     maven { url 'https://repo.andrei1058.com/releases/' }
     maven { url 'https://repo.codemc.org/repository/maven-public/' } // Some CodeCo stuff
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceholderAPI
+    maven { url 'https://mvn.lumine.io/repository/maven-public/' } // MythicMobs
 }
 
 dependencies {
@@ -34,14 +35,17 @@ dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.3-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT' // Spigot nms api
     compileOnly 'org.projectlombok:lombok:1.18.12'
-    compileOnly 'me.clip:placeholderapi:2.10.8'
+    compileOnly 'me.clip:placeholderapi:2.10.9'
+    implementation 'com.github.hyfe-dev:simple-spigot:1.0.11.2'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    // Quests
+    compileOnly 'com.github.electro2560:ClueScrollsAPI:-SNAPSHOT'
     compileOnly 'net.citizensnpcs:citizens:2.0.26-SNAPSHOT'
     compileOnly 'com.wasteofplastic:askyblock:3.0.9.4'
     compileOnly 'com.andrei1058.bedwars:bedwars-api:20.7'
     compileOnly 'com.github.Angeschossen:LandsAPI:4.5.2.0'
-    compileOnly 'com.github.electro2560:ClueScrollsAPI:-SNAPSHOT'
-    implementation 'com.github.hyfe-dev:simple-spigot:1.0.11.2'
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    compileOnly 'io.lumine.xikage:MythicMobs:4.9.1'
 }
 
 processResources {
