--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,15 @@ repositories {
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url 'https://oss.sonatype.org/content/groups/public/' }
     maven { url 'https://jitpack.io' }
-    maven { url 'https://gitlab.com/api/v4/projects/14122684/packages/maven' } // BedWars1058
-    maven { url 'https://dl.bintray.com/tastybento/maven-repo' } // ASkyBlock
-    maven { url 'https://repo.citizensnpcs.co/' } // Citizens
     maven { url 'https://repo.andrei1058.com/releases/' }
     maven { url 'https://repo.codemc.org/repository/maven-public/' } // Some CodeCo stuff
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceholderAPI
+
+    maven { url 'https://gitlab.com/api/v4/projects/14122684/packages/maven' } // BedWars1058
+    maven { url 'https://dl.bintray.com/tastybento/maven-repo' } // ASkyBlock
+    maven { url 'https://repo.citizensnpcs.co/' } // Citizens
     maven { url 'https://mvn.lumine.io/repository/maven-public/' } // MythicMobs
+    maven { url 'https://bitbucket.org/kangarko/libraries/raw/master' } // All mineacademy, e.g BossTM
 }
 
 dependencies {
@@ -46,6 +48,7 @@ dependencies {
     compileOnly 'com.andrei1058.bedwars:bedwars-api:20.7'
     compileOnly 'com.github.Angeschossen:LandsAPI:4.5.2.0'
     compileOnly 'io.lumine.xikage:MythicMobs:4.9.1'
+    compileOnly 'org.mineacademy.plugin:Boss-API:3.8.0'
 }
 
 processResources {
