--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: "BattlePass"
-version: "3.11"
+version: "3.12"
 main: io.github.battlepass.BattlePlugin
 api-version: 1.13
 soft-depend:
@@ -43,6 +43,9 @@ commands:
     description: Well. The main command I guess?
   battlepassadmin:
     aliases: [bpa, battlepassa, bpadmin]
+    permission: battlepass.admin
+  battlepassdebug:
+    aliases: [bpd, bpdebug]
     permission: battlepass.admin
 
 permissions:
