--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Request a feature
+description: Request a feature with BattlePass
 labels: ["Feature Request"]
 body:
   - type: markdown
